--- a/Frontend/src/style/Navbar.css
+++ b/Frontend/src/style/Navbar.css
@@ -2,10 +2,12 @@
     height:50px;
 }
 
+
+
 .navbar{
     display:flex;
-    align-items:center;
     justify-content:space-between;
+    align-items:center;
     padding-inline:90px;
     border-bottom:  1px solid #ccc; 
     background-color:#ffff;
@@ -18,6 +20,10 @@
 .header{
     display:flex;
     align-items: center;
+}
+
+.navbar a{
+    text-decoration: none;
 }
 
 .header h1{
