--- a/Frontend/src/style/Navbar.css
+++ b/Frontend/src/style/Navbar.css
@@ -1,9 +1,6 @@
 .logo{
     height:50px;
 }
-
-
-
 .navbar{
     display:flex;
     justify-content:space-between;
@@ -65,16 +62,19 @@
 
 .profile-box{
     display: flex;
-    /* position:relative; */
 }
 
 .profile-btn{
+    display:flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap:10px;
     background: none;
     border: 1px solid #ccc;
     width:fit-content;
     border-radius: 50px;
     padding-inline:15px;
-    padding-block:10px;
+    padding-block:5px;
     cursor: pointer; 
 }
 
@@ -93,17 +93,6 @@
     padding-left:12px;
 }
 
-#user-icon{
-    font-size: 1.3rem;
-}
-
-
-.div{
-    background-color: white;
-    width:20px;
-    height:20px;
-  }
-  
 /* dropdown */
   .dropdown{
     background-color: white;
