--- a/Frontend/src/style/Login.css
+++ b/Frontend/src/style/Login.css
@@ -1,14 +1,20 @@
 .login-container{
-    margin-top:20px;
+    margin-top:70px; 
     width:100%;
-    display:flex;
+    /* display:flex;
     align-items: center;
-    padding:100px;
+    padding:100px; */
 }
 
+.error{
+    color: #f44336;
+}
+/* 
 h5{
     text-align: center;
-}
+    font-size:1.7rem;
+} */
+
 
 p a{
     text-decoration: underline;
@@ -18,20 +24,21 @@ p a{
 
 .login-box{
     max-width:500px;
-    border:2px solid rgba(83, 177, 235, 0.922);
+    /* border:2px solid #53b1eb; */
     border-radius:20px;
-    padding:90px 70px;
-    margin:0 auto;
-}
+    /* padding:90px 70px;  */
+     
+} 
 
-form{
+.login-form{
     display:flex;
     flex-direction: column;
     gap:20px;
+    width:100%
 }
 
-form button{
-    background-color: rgba(83, 177, 235, 0.922);
+.login-btn{
+    background-color: #53b1eb;
     border:none;
     border-radius: 50px;
     width:100%;
@@ -39,9 +46,40 @@ form button{
     color:white;
 }
 
-#email,#pass{
+
+#password,#email,#username{
     width:100%;
     box-sizing: border-box;
     padding:5px;
-    outline: none;
+}
+
+
+#password,#email,#username:focus{
+    outline:none;
+} 
+
+.Toastify__toast-container {
+    position: fixed !important;
+    top: 50% !important; /* vertically centered */
+    right: 0 !important; 
+    transform: translateY(-50%);
+    z-index: 9999 !important;  
+}
+
+
+
+@media (min-width:678px) and (max-width:1728px){
+    .login-container{
+        padding:100px;
+    }
+    .login-box{
+         border:2px solid #53b1eb; 
+         padding:90px 70px;  
+    }
+}
+@media (min-width:375px) and (max-width:678px){
+   .login-box{
+        border:none !important;
+        padding:0 !important;
+    }
 }
