--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -11,7 +11,11 @@
 .app-container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Ensures it takes full height */
+  min-height: 100vh;
+}
+
+.main-content{
+  flex:1;
 }
 
 
