--- a/Frontend/src/styles/Hero.css
+++ b/Frontend/src/styles/Hero.css
@@ -8,6 +8,25 @@
     cursor:pointer;
 }
 
+/* swiper  */
+.swiper-button-prev:hover,
+.swiper-button-next:hover {
+  color:black; 
+  background-color:rgba(255,255,255,0.9); 
+  border-radius: 50%;
+  width:50px;
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after {
+  font-size: 0.9rem !important;
+  line-height: 1;
+}
+
+.swiper-pagination-bullet{
+  background-color: white !important;  
+}
+
 
 @media (min-width: 360px) and (max-width:673px) {
   .carousel-inner img{
