--- a/Frontend/src/styles/Hero.css
+++ b/Frontend/src/styles/Hero.css
@@ -2,17 +2,21 @@
   border-radius: 15px;
 }
 
+.listi{
+  margin-top: 249px !important;
+}
+
 .carousel-inner img{
     height:17rem;
     width: 100%;
     cursor:pointer;
 }
 
-/* swiper  */
-.swiper-button-prev:hover,
-.swiper-button-next:hover {
+/* swiper */
+.swiper-container .swiper-button-prev:hover,
+.swiper-container .swiper-button-next:hover {
   color:black; 
-  background-color:rgba(255,255,255,0.9); 
+  background-color:rgba(255,255,255,0.9);
   border-radius: 50%;
   width:50px;
 }
@@ -42,7 +46,7 @@
   }
 }
 
-@media (min-width:1024px)and(max-width: 1024px){
+@media (min-width:1024px)and(max-width: 1220px){
   .carousel-inner img{
     width:100%;
     height:23rem
