--- a/Frontend/src/styles/Hero.css
+++ b/Frontend/src/styles/Hero.css
@@ -1,3 +1,4 @@
+
 .carousel-inner{
   border-radius: 15px;
 }
@@ -46,10 +47,10 @@
   }
 }
 
-@media (min-width:1024px)and(max-width: 1220px){
+@media (min-width:1024px)and(max-width: 1300px){
   .carousel-inner img{
     width:100%;
-    height:23rem
+    height:29rem;
   }
 }
 
